--- a/src/app/components/application-process/application-process.component.scss
+++ b/src/app/components/application-process/application-process.component.scss
@@ -6,3 +6,18 @@
     margin-top: 16px;
   }
   
+  input[type="file"] {
+    display: none;
+}
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.file-name{
+  margin-bottom: 10px;
+}
