--- a/src/app/components/application-process/application-process.component.scss
+++ b/src/app/components/application-process/application-process.component.scss
@@ -22,3 +22,9 @@ input[type="file"] {
 .file-name{
   margin-bottom: 10px;
 }
+
+.applicant-review-info{
+  .review-item{
+    margin-bottom: 10px;
+  }
+}
